--- a/index.html
+++ b/index.html
@@ -46,25 +46,25 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav me-auto mb-2 mb-md-0">
-                        <span class="navbar-text">
+                        <span class="navbar-text d-none d-lg-block">
                             Fine Arts Community Education
                         </span>
                     </div>
                     <ul class="navbar-nav ms-auto mb-2 mb-md-0 d-flex">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link text-nowrap" href="about-us.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="courses.html">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Instructors</a>
+                            <a class="nav-link" href="instructors.html">Instructors</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Fees</a>
+                            <a class="nav-link" href="fees.html">Fees</a>
                         </li>
                     </ul>
                 </div>
