--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="d-flex flex-column">
+<body class="d-flex flex-column cover">
 
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-primary mb-4">
@@ -74,14 +74,51 @@
 
     <main>
         <div class="container">
-            <div class="row">
-                <div class="col-12 text-md-center">
-                    <h1>Cover your page.</h1>
-                    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-                    <p class="lead">
-                        <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-                    </p>
+
+            <div class="row justify-content-md-center justify-content-lg-end mt-md-5 mt-lg-5 pt-lg-5">
+                <div class="col-12 col-lg-6">
+                    <div class="text-md-center bg-secondary p-3 p-md-5">
+                        <h1 class="text-white">Embrace your artistic side.</h1>
+                        <p class="lead text-white">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+                        <p class="mb-0">
+                            <a href="#" class="btn btn-lg btn-primary">Learn more</a>
+                        </p>
+                    </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-md-center justify-content-lg-end mt-md-5 mt-lg-5 pt-lg-5">
+
+                <div class="col">
+                    <div class="text-md-center bg-danger p-3 p-lg-5">
+                        <h2 class="text-white">Courses</h2>
+                        <p class="lead text-white">Lorem ipsum</p>
+                        <p class="mb-0">
+                            <a href="#" class="btn btn-lg btn-success">Course Catalog</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="text-md-center bg-success p-3 p-lg-5">
+                        <h2 class="text-white">Instructors</h2>
+                        <p class="lead text-white">Lorem ipsum</p>
+                        <p class="mb-0">
+                            <a href="#" class="btn btn-lg btn-info">Faculty Directory</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="text-md-center bg-info p-3 p-lg-5">
+                        <h2 class="text-white">Fees</h2>
+                        <p class="lead text-white">Lorem ipsum</p>
+                        <p class="mb-0">
+                            <a href="#" class="btn btn-lg btn-secondary">Tuition Calculator</a>
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </main>
