--- a/index.html
+++ b/index.html
@@ -75,46 +75,46 @@
     <main>
         <div class="container">
 
-            <div class="row justify-content-md-center justify-content-lg-end mt-md-5 mt-lg-5 pt-lg-5">
+            <div class="row justify-content-md-center justify-content-lg-end mt-md-5 pt-lg-4">
                 <div class="col-12 col-lg-6">
-                    <div class="text-md-center bg-secondary p-3 p-md-5">
+                    <div class="text-md-center bg-secondary p-2 p-sm-3 p-md-5">
                         <h1 class="text-white">Embrace your artistic side.</h1>
                         <p class="lead text-white">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                         <p class="mb-0">
-                            <a href="#" class="btn btn-lg btn-primary">Learn more</a>
+                            <a href="about-us.html" class="btn btn-lg btn-primary">Learn more</a>
                         </p>
                     </div>
                 </div>
             </div>
 
-            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-md-center justify-content-lg-end mt-md-5 mt-lg-5 pt-lg-5">
+            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-md-center justify-content-lg-end mt-md-5 pt-lg-5">
 
                 <div class="col">
-                    <div class="text-md-center bg-danger p-3 p-lg-5">
+                    <div class="text-md-center bg-danger p-2 p-sm-3">
                         <h2 class="text-white">Courses</h2>
                         <p class="lead text-white">Lorem ipsum</p>
                         <p class="mb-0">
-                            <a href="#" class="btn btn-lg btn-success">Course Catalog</a>
+                            <a href="courses.html" class="btn btn-lg btn-success">Course Catalog</a>
                         </p>
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="text-md-center bg-success p-3 p-lg-5">
+                    <div class="text-md-center bg-success p-2 p-sm-3">
                         <h2 class="text-white">Instructors</h2>
                         <p class="lead text-white">Lorem ipsum</p>
                         <p class="mb-0">
-                            <a href="#" class="btn btn-lg btn-info">Faculty Directory</a>
+                            <a href="instructors.html" class="btn btn-lg btn-info">Faculty Directory</a>
                         </p>
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="text-md-center bg-info p-3 p-lg-5">
+                    <div class="text-md-center bg-info p-2 p-sm-3">
                         <h2 class="text-white">Fees</h2>
                         <p class="lead text-white">Lorem ipsum</p>
                         <p class="mb-0">
-                            <a href="#" class="btn btn-lg btn-secondary">Tuition Calculator</a>
+                            <a href="fees.html" class="btn btn-lg btn-secondary">Tuition Calculator</a>
                         </p>
                     </div>
                 </div>
