--- a/courses.html
+++ b/courses.html
@@ -6,29 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A website for an imaginary company. Fulfills the requirements for the CS 6251 final project.">
     <meta name="author" content="David Barbero">
-    <title>Courses | FACE | Fine Arts Community Education</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
-
+    <title>FACE | Fine Arts Community Education</title>
+    <link rel="canonical" href="https://cs6251final.barberod.com/courses.html">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
 </head>
 
 <body>
@@ -74,18 +55,40 @@
 
     <main>
 
-        <section class="py-5 text-center container">
-            <div class="row py-lg-5">
-                <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Album example</h1>
-                    <p class="lead text-muted">Something short and leading about the collection below—its contents, the
-                        creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
-                        entirely.</p>
-                    <p>
-                        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-                        <a href="#" class="btn btn-warning my-2">Warning action</a>
-                    </p>
+        <section class="container-fluid courses-banner">
+            <div class="py-3 text-center container">
+                <div class="row py-lg-5">
+                    <div class="col-lg-6 col-md-8 bg-success mx-auto p-2 p-sm-3 p-lg-5">
+                        <h1 class="fw-light text-white">Courses</h1>
+                        <p class="lead text-white">Something short and leading about the collection below—its contents, the
+                            creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
+                            entirely.</p>
+                        <p>
+                            <span class="badge courses-badge rounded-pill bg-info">
+                                Visual Arts<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                            <span class="badge courses-badge rounded-pill bg-danger">
+                                Performing Arts<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                            <span class="badge courses-badge rounded-pill bg-accent1">
+                                Digital Arts<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                            <span class="badge courses-badge rounded-pill bg-accent2">
+                                Art Appreciation<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                        </p>
+                        <p>
+                            <span class="badge courses-badge rounded-pill bg-accent3">
+                                Adults<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                            <span class="badge courses-badge rounded-pill bg-accent4">
+                                Teens<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                            <span class="badge courses-badge rounded-pill bg-accent5">
+                                Kids<span class="badge courses-badge rounded-pill bg-secondary">4</span>
+                            </span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
