--- a/courses.html
+++ b/courses.html
@@ -108,15 +108,18 @@
                             </svg>
 
                             <div class="card-body">
+                                <h2 class="card-title">Painting</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This content is a little bit longer.</p>
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
+                                    <small class="text-muted">Tues. 6:00-7:00 PM</small>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">$50</button>
                                 </div>
+                            </div>
+                            <div class="card-footer">
+                                <span class="badge courses-badge rounded-pill bg-info">Visual Arts</span>
+                                <span class="badge courses-badge rounded-pill bg-accent3">Adults</span>
+                                <span class="badge courses-badge rounded-pill bg-accent4">Teens</span>
                             </div>
                         </div>
                     </div>
