courses card pics added

--- a/courses.html
+++ b/courses.html
@@ -99,14 +99,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/learn-painting.jpg" class="card-img-top" alt="Learn Painting">
                             <div class="card-body">
                                 <h2 class="card-title">Learn Painting</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
@@ -125,14 +118,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/great-books-story-time.jpg" class="card-img-top" alt="Great Books Story Time">
                             <div class="card-body">
                                 <h2 class="card-title">Great Books Story Time</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -149,14 +135,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/sunday-speaker-series.jpg" class="card-img-top" alt="Sunday Speaker Series">
                             <div class="card-body">
                                 <h2 class="card-title">Sunday Speaker Series</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -174,14 +153,7 @@
 
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/have-fun-with-art.jpg" class="card-img-top" alt="Have Fun with Art">
                             <div class="card-body">
                                 <h2 class="card-title">Have Fun with Art</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -200,16 +172,9 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/learn-photography.jpg" class="card-img-top" alt="Learn Photography">
                             <div class="card-body">
-                                <h2 class="card-title">Learn Pottery</h2>
+                                <h2 class="card-title">Learn Photography</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Wed. 6:00-7:00 PM</small>
@@ -225,14 +190,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/comedic-improv.jpg" class="card-img-top" alt="Comedic Improv">
                             <div class="card-body">
                                 <h2 class="card-title">Comedic Improv</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -250,14 +208,7 @@
 
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/orchestra-rehearsal.jpg" class="card-img-top" alt="Orchestra Rehearsal">
                             <div class="card-body">
                                 <h2 class="card-title">Orchestra Rehearsal</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -274,38 +225,25 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/3d-printing-for-everyone.jpg" class="card-img-top" alt="3-D Printing for Everyone">
                             <div class="card-body">
-                                <h2 class="card-title">NFTs for Fun and Profit</h2>
+                                <h2 class="card-title">3-D Printing for Everyone</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Wed. 6:00-7:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$50</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">$5 + Supplies</button>
                                 </div>
                             </div>
                             <div class="card-footer">
                                 <span class="badge courses-badge rounded-pill bg-accent1">Digital Arts</span>
                                 <span class="badge courses-badge rounded-pill bg-accent3">Adults</span>
+                                <span class="badge courses-badge rounded-pill bg-accent4">Teens</span>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-
+                            <img src="pics/maker-culture-for-kids.jpg" class="card-img-top" alt="Maker Culture for Kids">
                             <div class="card-body">
                                 <h2 class="card-title">Maker Culture for Kids</h2>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
