instructors page created

--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="d-flex flex-column home-cover">
+<body class="d-flex flex-column instructors-cover">
 
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-primary mb-4">
@@ -33,7 +33,7 @@
                     </div>
                     <ul class="navbar-nav ms-auto mb-2 mb-md-0 d-flex">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-nowrap" href="about-us.html">About Us</a>
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="courses.html">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="instructors.html">Instructors</a>
+                            <a class="nav-link active" aria-current="page" href="instructors.html">Instructors</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="fees.html">Fees</a>
@@ -56,11 +56,11 @@
     <main>
         <div class="container">
 
-            <div class="row justify-content-md-center justify-content-lg-end mt-md-5 pt-lg-4">
-                <div class="col-12 col-lg-6">
-                    <div class="text-md-center bg-secondary p-2 p-sm-3 p-md-5">
-                        <h1 class="text-white">Embrace your artistic side.</h1>
-                        <p class="lead text-white">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <div class="row justify-content-center mt-md-5 pt-lg-4">
+                <div class="col-12 col-md-9 col-lg-8">
+                    <div class="text-md-center bg-white p-2 p-sm-3 p-md-5">
+                        <h1>Embrace your artistic side.</h1>
+                        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                         <p class="mb-0">
                             <a href="about-us.html" class="btn btn-lg btn-primary">Learn more</a>
                         </p>
@@ -68,39 +68,6 @@
                 </div>
             </div>
 
-            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-md-center justify-content-lg-end mt-md-5 pt-lg-5">
-
-                <div class="col">
-                    <div class="text-md-center bg-danger p-2 p-sm-3">
-                        <h2 class="text-white">Courses</h2>
-                        <p class="lead text-white">Lorem ipsum</p>
-                        <p class="mb-0">
-                            <a href="courses.html" class="btn btn-lg btn-success">Course Catalog</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="text-md-center bg-success p-2 p-sm-3">
-                        <h2 class="text-white">Instructors</h2>
-                        <p class="lead text-white">Lorem ipsum</p>
-                        <p class="mb-0">
-                            <a href="instructors.html" class="btn btn-lg btn-info">Faculty Directory</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="text-md-center bg-info p-2 p-sm-3">
-                        <h2 class="text-white">Fees</h2>
-                        <p class="lead text-white">Lorem ipsum</p>
-                        <p class="mb-0">
-                            <a href="fees.html" class="btn btn-lg btn-secondary">Tuition Calculator</a>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
         </div>
     </main>
 
