instructors page with vertical tabs added

--- a/instructors.html
+++ b/instructors.html
@@ -56,14 +56,63 @@
     <main>
         <div class="container">
 
-            <div class="row justify-content-center mt-md-5 pt-lg-4">
-                <div class="col-12 col-md-9 col-lg-8">
-                    <div class="text-md-center bg-white p-2 p-sm-3 p-md-5">
-                        <h1>Embrace your artistic side.</h1>
-                        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-                        <p class="mb-0">
-                            <a href="about-us.html" class="btn btn-lg btn-primary">Learn more</a>
-                        </p>
+            <div class="row justify-content-center justify-content-md-start p-2 my-2 my-md-5">
+                <div class="col-12 col-md-10 col-lg-9 bg-white">
+                    <div class="row">
+                        <div class="col-12 text-md-center p-3 p-md-5 pb-md-3">
+                            <h1>Learn from Creative Professionals</h1>
+                            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 p-2 p-sm-3 p-md-5 pt-md-3">
+
+                            <div class="d-flex align-items-start">
+                                <div class="nav flex-column nav-pills me-5" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                                    <button class="nav-link active" id="v-pills-instructor1-tab" data-bs-toggle="pill" data-bs-target="#v-pills-instructor1" type="button" role="tab" aria-controls="v-pills-instructor1" aria-selected="true">Nina Smith</button>
+                                    <button class="nav-link" id="v-pills-instructor2-tab" data-bs-toggle="pill" data-bs-target="#v-pills-instructor2" type="button" role="tab" aria-controls="v-pills-instructor2" aria-selected="false">Robert Jones</button>
+                                    <button class="nav-link" id="v-pills-instructor3-tab" data-bs-toggle="pill" data-bs-target="#v-pills-instructor3" type="button" role="tab" aria-controls="v-pills-instructor3" aria-selected="false">Martin Garcia</button>
+                                    <button class="nav-link" id="v-pills-instructor4-tab" data-bs-toggle="pill" data-bs-target="#v-pills-instructor4" type="button" role="tab" aria-controls="v-pills-instructor4" aria-selected="false">Michelle Davis</button>
+                                    <button class="nav-link" id="v-pills-instructor5-tab" data-bs-toggle="pill" data-bs-target="#v-pills-instructor5" type="button" role="tab" aria-controls="v-pills-instructor5" aria-selected="false">Kevin Thompson</button>
+                                </div>
+
+                                <div class="tab-content" id="v-pills-tabContent">
+
+                                    <div class="tab-pane fade show active" id="v-pills-instructor1" role="tabpanel" aria-labelledby="v-pills-instructor1-tab">
+                                        <h2>Nina Smith</h2>
+                                        <p><img src="pics/instructor1.jpg" class="rounded float-start float-md-end m-2" width="200" alt="Nina Smith">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis venenatis aliquet. Donec ut tellus fermentum, ultricies justo vitae, pulvinar metus. Nullam interdum tortor nisl, vitae vulputate nisl suscipit vitae. Aliquam fermentum ut turpis eget pretium. Integer in tempus risus, vitae imperdiet arcu. Morbi at elit id nisi dignissim consectetur. Duis gravida congue nisl ac fermentum. Pellentesque dignissim sollicitudin ex, at gravida odio ullamcorper ac. Duis molestie purus sit amet tortor sagittis, nec aliquam nisi varius. Praesent lobortis accumsan tortor, ac lacinia mauris placerat quis.</p>
+                                        <p>Nam malesuada libero non ante malesuada mollis. Etiam scelerisque neque non eros lacinia lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas mattis nunc eu augue cursus bibendum. Mauris sit amet ultrices quam, nec consequat massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vulputate leo ac porttitor pharetra. Suspendisse vel porta justo, sit amet imperdiet ipsum. Donec faucibus, tortor eu varius laoreet, felis ligula posuere elit, in feugiat neque sapien mattis dolor. Fusce laoreet odio in neque vestibulum convallis. Proin luctus tellus laoreet bibendum volutpat. Vivamus in nunc purus. Ut nibh augue, egestas in finibus a, iaculis eget tortor. Pellentesque ac diam et tortor interdum ultrices.</p>
+                                    </div>
+
+                                    <div class="tab-pane fade" id="v-pills-instructor2" role="tabpanel" aria-labelledby="v-pills-instructor2-tab">
+                                        <h2>Robert Jones</h2>
+                                        <p><img src="pics/instructor2.jpg" class="rounded float-start float-md-end m-2" width="200" alt="Robert Jones">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis venenatis aliquet. Donec ut tellus fermentum, ultricies justo vitae, pulvinar metus. Nullam interdum tortor nisl, vitae vulputate nisl suscipit vitae. Aliquam fermentum ut turpis eget pretium. Integer in tempus risus, vitae imperdiet arcu. Morbi at elit id nisi dignissim consectetur. Duis gravida congue nisl ac fermentum. Pellentesque dignissim sollicitudin ex, at gravida odio ullamcorper ac. Duis molestie purus sit amet tortor sagittis, nec aliquam nisi varius. Praesent lobortis accumsan tortor, ac lacinia mauris placerat quis.</p>
+                                        <p>Nam malesuada libero non ante malesuada mollis. Etiam scelerisque neque non eros lacinia lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas mattis nunc eu augue cursus bibendum. Mauris sit amet ultrices quam, nec consequat massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vulputate leo ac porttitor pharetra. Suspendisse vel porta justo, sit amet imperdiet ipsum. Donec faucibus, tortor eu varius laoreet, felis ligula posuere elit, in feugiat neque sapien mattis dolor. Fusce laoreet odio in neque vestibulum convallis. Proin luctus tellus laoreet bibendum volutpat. Vivamus in nunc purus. Ut nibh augue, egestas in finibus a, iaculis eget tortor. Pellentesque ac diam et tortor interdum ultrices.</p>
+                                    </div>
+
+                                    <div class="tab-pane fade" id="v-pills-instructor3" role="tabpanel" aria-labelledby="v-pills-instructor3-tab">
+                                        <h2>Martin Garcia</h2>
+                                        <p><img src="pics/instructor3.jpg" class="rounded float-start float-md-end m-2" width="200" alt="Martin Garcia">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis venenatis aliquet. Donec ut tellus fermentum, ultricies justo vitae, pulvinar metus. Nullam interdum tortor nisl, vitae vulputate nisl suscipit vitae. Aliquam fermentum ut turpis eget pretium. Integer in tempus risus, vitae imperdiet arcu. Morbi at elit id nisi dignissim consectetur. Duis gravida congue nisl ac fermentum. Pellentesque dignissim sollicitudin ex, at gravida odio ullamcorper ac. Duis molestie purus sit amet tortor sagittis, nec aliquam nisi varius. Praesent lobortis accumsan tortor, ac lacinia mauris placerat quis.</p>
+                                        <p>Nam malesuada libero non ante malesuada mollis. Etiam scelerisque neque non eros lacinia lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas mattis nunc eu augue cursus bibendum. Mauris sit amet ultrices quam, nec consequat massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vulputate leo ac porttitor pharetra. Suspendisse vel porta justo, sit amet imperdiet ipsum. Donec faucibus, tortor eu varius laoreet, felis ligula posuere elit, in feugiat neque sapien mattis dolor. Fusce laoreet odio in neque vestibulum convallis. Proin luctus tellus laoreet bibendum volutpat. Vivamus in nunc purus. Ut nibh augue, egestas in finibus a, iaculis eget tortor. Pellentesque ac diam et tortor interdum ultrices.</p>
+                                    </div>
+
+                                    <div class="tab-pane fade" id="v-pills-instructor4" role="tabpanel" aria-labelledby="v-pills-instructor4-tab">
+                                        <h2>Michelle Davis</h2>
+                                        <p><img src="pics/instructor4.jpg" class="rounded float-start float-md-end m-2" width="200" alt="Michelle Davis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis venenatis aliquet. Donec ut tellus fermentum, ultricies justo vitae, pulvinar metus. Nullam interdum tortor nisl, vitae vulputate nisl suscipit vitae. Aliquam fermentum ut turpis eget pretium. Integer in tempus risus, vitae imperdiet arcu. Morbi at elit id nisi dignissim consectetur. Duis gravida congue nisl ac fermentum. Pellentesque dignissim sollicitudin ex, at gravida odio ullamcorper ac. Duis molestie purus sit amet tortor sagittis, nec aliquam nisi varius. Praesent lobortis accumsan tortor, ac lacinia mauris placerat quis.</p>
+                                        <p>Nam malesuada libero non ante malesuada mollis. Etiam scelerisque neque non eros lacinia lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas mattis nunc eu augue cursus bibendum. Mauris sit amet ultrices quam, nec consequat massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vulputate leo ac porttitor pharetra. Suspendisse vel porta justo, sit amet imperdiet ipsum. Donec faucibus, tortor eu varius laoreet, felis ligula posuere elit, in feugiat neque sapien mattis dolor. Fusce laoreet odio in neque vestibulum convallis. Proin luctus tellus laoreet bibendum volutpat. Vivamus in nunc purus. Ut nibh augue, egestas in finibus a, iaculis eget tortor. Pellentesque ac diam et tortor interdum ultrices.</p>
+                                    </div>
+
+                                    <div class="tab-pane fade" id="v-pills-instructor5" role="tabpanel" aria-labelledby="v-pills-instructor5-tab">
+                                        <h2>Kevin Thompson</h2>
+                                        <p><img src="pics/instructor5.jpg" class="rounded float-start float-md-end m-2" width="200" alt="Kevin Thompson">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis venenatis aliquet. Donec ut tellus fermentum, ultricies justo vitae, pulvinar metus. Nullam interdum tortor nisl, vitae vulputate nisl suscipit vitae. Aliquam fermentum ut turpis eget pretium. Integer in tempus risus, vitae imperdiet arcu. Morbi at elit id nisi dignissim consectetur. Duis gravida congue nisl ac fermentum. Pellentesque dignissim sollicitudin ex, at gravida odio ullamcorper ac. Duis molestie purus sit amet tortor sagittis, nec aliquam nisi varius. Praesent lobortis accumsan tortor, ac lacinia mauris placerat quis.</p>
+                                        <p>Nam malesuada libero non ante malesuada mollis. Etiam scelerisque neque non eros lacinia lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas mattis nunc eu augue cursus bibendum. Mauris sit amet ultrices quam, nec consequat massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vulputate leo ac porttitor pharetra. Suspendisse vel porta justo, sit amet imperdiet ipsum. Donec faucibus, tortor eu varius laoreet, felis ligula posuere elit, in feugiat neque sapien mattis dolor. Fusce laoreet odio in neque vestibulum convallis. Proin luctus tellus laoreet bibendum volutpat. Vivamus in nunc purus. Ut nibh augue, egestas in finibus a, iaculis eget tortor. Pellentesque ac diam et tortor interdum ultrices.</p>
+                                    </div>
+
+                                </div>
+
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
