--- a/instructors.html
+++ b/instructors.html
@@ -56,11 +56,13 @@
     <main>
         <div class="container">
 
-            <div class="row justify-content-center justify-content-md-start p-2 my-2 my-md-5">
+            <div class="row justify-content-center justify-content-md-start p-2 mb-5 my-sm-2">
                 <div class="col-12 col-md-10 col-lg-9 bg-white">
                     <div class="row">
-                        <div class="col-12 text-md-center p-3 p-md-5 pb-md-3">
+                        <div class="col-12 text-center p-3 pt-md-5">
                             <h1>Learn from Creative Professionals</h1>
+                        </div>
+                        <div class="col-12 text-md-center p-3 pb-md-5">
                             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                         </div>
                     </div>
