--- a/instructors.html
+++ b/instructors.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A website for an imaginary company. Fulfills the requirements for the CS 6251 final project.">
     <meta name="author" content="David Barbero">
-    <title>FACE | Fine Arts Community Education</title>
+    <title>Instructors | FACE | Fine Arts Community Education</title>
     <link rel="canonical" href="https://cs6251final.barberod.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
