initial content for about us done

--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="d-flex flex-column instructors-cover">
+<body class="d-flex flex-column about-cover">
 
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-primary mb-4">
@@ -54,10 +54,43 @@
     </header>
 
     <main>
-        <div class="container">
-
-            
-
+        <div class="container p-4">
+            <div class="row g-3 mb-3">
+                <div class="col">
+                    <div class="p-3 bg-dark text-white">
+                        <h1 class="text-md-center">About Us</h1>
+                        <p class="text-md-center mb-0">Keep reading to learn more about Fine Arts Community Education.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-3 mb-3">
+                <div class="col">
+                    <div class="p-3 bg-dark text-white">
+                        <h2>Our Location</h2>
+                        <p class="mb-0">Lorem ipsum.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3 bg-dark text-white">
+                        <h2>Our Building</h2>
+                        <p class="mb-0">Lorem ipsum.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-3 mb-3">
+                <div class="col">
+                    <div class="p-3 bg-dark text-white">
+                        <h2>Our History</h2>
+                        <p class="mb-0">Lorem ipsum.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3 bg-dark text-white">
+                        <h2>Our Mission</h2>
+                        <p class="mb-0">Lorem ipsum.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
